# uzg_emu_check_ui

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
src/: app_controller.rs  app_error.rs  events.rs  helper.rs  lib.rs  main.rs  main_window.glade
src/ui/: app.rs  app_layout.rs  connect.rs  helper.rs  main_layout.rs  mod.rs
