[package]
name = "emu_check_ui"
version = "0.1.0"
authors = ["Tom <tomvercaut@gmail.com>"]
edition = "2018"

[dependencies]
gdk = "^0"
glib = "^0"
gio = "^0"
clap = "2.33.1"
log = "0.4.8"
simple_logger = "1.10.0"
thiserror = "1.0.20"
dirs = "3.0"
flume = "0.9.0"
cascade = "^1.0"

[dependencies.gtk]
version = "^0"
default-features = false
features = ["v3_22"]

[dependencies.async-std]
version = "^1.6.2"
features = ["attributes",]

[dependencies.emu_check]
git = "https://github.com/tomvercaut/uzg_emu_check"
branch = "master"
